Face analysis using computer vision and face SDK

--- a/19-face/C-Sharp/face-api/appsettings.json
+++ b/19-face/C-Sharp/face-api/appsettings.json
@@ -1,4 +1,4 @@
 {
-    "CognitiveServicesEndpoint": "YOUR_COGNITIVE_SERVICES_ENDPOINT",
-    "CognitiveServiceKey": "YOUR_COGNITIVE_SERVICES_KEY"
+    "CognitiveServicesEndpoint": "https://vaskar-cog-service-3.cognitiveservices.azure.com/",
+    "CognitiveServiceKey": "c15e6fda1b5a457b8bbd36cda0ed7204"
 }
