--- a/07-speech/C-Sharp/speaking-clock/appsettings.json
+++ b/07-speech/C-Sharp/speaking-clock/appsettings.json
@@ -1,4 +1,4 @@
 {
-    "CognitiveServiceKey": "YOUR_COGNITIVE_SERVICES_KEY",
-    "CognitiveServiceRegion": "YOUR_COGNITIVE_SERVICES_LOCATION"
+    "CognitiveServiceKey": "54b91b4ba36e46eb94c607afd7f55301",
+    "CognitiveServiceRegion": "australiaeast"
 }
